[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "PyAxe"
version = "1.0.32"
authors = [
  { name="Sun Jin", email="412640665@qq.com" },
]
description = "An utility library for building command-line tool easily"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/sunjinopensource/PyAxe"
"Bug Tracker" = "https://github.com/sunjinopensource/PyAxe/issues"